Added contact/webpages link buttons

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
+@import url(fontawesome-all.min.css);
 
 /*
 	CSS Template by @ajlkn
